# LUFS-Meter-Plus-VST3

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MANUAL.md  README-suhyeonppark의 MacBook Pro.md  README.md  build_and_package.ps1  udp_listen.ps1  udp_listen2.ps1
.claude/: settings.json
Source/: LufsUdpSender.cpp  LufsUdpSender.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/: installer.iss
scripts/: check_macos_setup.sh  install_vst3_windows.ps1  notarize_macos_release.sh  package_macos_universal.sh  package_vst3_macos.sh  package_vst3_windows.ps1
